--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,9 +1,6 @@
 spring:
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:test;
-    username: sa
-    password:
+    url: jdbc:mariadb://127.0.0.1:3306/ot__test?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=Asia/Seoul
   jpa:
     hibernate:
       ddl-auto: create
