--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,6 +1,9 @@
 spring:
   datasource:
-    url: jdbc:mariadb://127.0.0.1:3306/ot__test?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=Asia/Seoul
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:test;
+    username: sa
+    password:
   jpa:
     hibernate:
       ddl-auto: create
