--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,4 +42,6 @@ logging:
     org.hibernate.orm.jdbc.bind: TRACE
     org.hibernate.orm.jdbc.extract: TRACE
 custom:
-  genFileDirPath: c:/Temp/ot
+  file:
+    genFileDirPath: c:/Temp/ot
+    maxFileSize: '#{10 * 1024 * 1024}' # 10MB
