--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,5 +43,5 @@ logging:
     org.hibernate.orm.jdbc.extract: TRACE
 custom:
   file:
-    genFileDirPath: c:/Temp/ot
+    genFileDirPath: c:/Temp/ot/
     maxFileSize: '#{10 * 1024 * 1024}' # 10MB
