--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -45,3 +45,7 @@ custom:
   file:
     genFileDirPath: c:/Temp/ot/
     maxFileSize: '#{10 * 1024 * 1024}' # 10MB
+kakao:
+  rest:
+    api:
+      key: '카카오 REST API KEY'
