[FEAT]캐시저장소를 redis로 설정

--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,9 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
-    implementation 'commons-fileupload:commons-fileupload:1.4'
+    // cache 적용
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
 tasks.named('test') {
