--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,16 +7,16 @@ spring:
     active: dev
     include: secret
   datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://127.0.0.1:3306/ot__dev?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=Asia/Seoul
-    username: root
-    password: 1234
+    driver-class-name: '${custom.dev.database.driver-class-name}'
+    url: '${custom.dev.database.url}'
+    username: '${custom.dev.database.username}'
+    password: '${custom.dev.database.password}'
   cache:
     type: redis
   data:
     redis:
-      host: 127.0.0.1
-      port: 6379
+      host: '${custom.dev.redis.host}'
+      port: '${custom.dev.redis.port}'
 
   security:
     oauth2:
@@ -49,10 +49,6 @@ logging:
     com.example.ot: DEBUG
     org.hibernate.orm.jdbc.bind: TRACE
     org.hibernate.orm.jdbc.extract: TRACE
-custom:
-  file:
-    genFileDirPath: c:/Temp/ot/
-    maxFileSize: '#{10 * 1024 * 1024}' # 10MB
 kakao:
   rest:
     api:
