--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,4 +1,7 @@
 spring:
+  output:
+    ansi:
+      enabled: always
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:test;
@@ -7,3 +10,9 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
+    defer-datasource-initialization: true
+
+  sql:
+    init:
+      data-locations: classpath:data_h2.sql
+      mode: always
