[TEST]호스트 등록, 수정, 삭제 테스트 (#52)

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -14,5 +14,5 @@ spring:
 
   sql:
     init:
-      data-locations: classpath:data_h2.sql
+      data-locations: classpath:test_data_h2.sql
       mode: always
