[REFACTOR]HashTag and Keyword 리팩토링

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,4 @@
 spring:
-  mvc:
-    hiddenmethod:
-      filter:
-        enabled: true
   profiles:
     active: dev
     include: secret
@@ -52,4 +48,4 @@ logging:
 kakao:
   rest:
     api:
-      key: '카카오 REST API KEY'
+      key: '${kakao.rest.api.key}'
