[FEAT] Discord Error Log webhook Dependency added

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -19,3 +19,9 @@ spring:
 
 server:
   port: '${custom.dev.server.port}'
+
+
+logging:
+  discord:
+    webhook-uri: '{custom.dev.webhook.logBack}'
+  config: classpath:logback-spring.xml
