[FIX]logback-spring.xml 위치 변경

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -24,4 +24,4 @@ server:
 logging:
   discord:
     webhook-uri: '{custom.dev.webhook.logBack}'
-  config: classpath:logback-spring.xml
+  config: classpath:log/logback-spring.xml
