--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -23,4 +23,4 @@ server:
 logging:
   discord:
     webhook-uri: '{custom.prod.webhook.logBack}'
-  config: classpath:logback-spring.xml
+  config: classpath:log/logback-spring.xml
