[FIX] logback 설정 수정

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -23,5 +23,5 @@ server:
 
 logging:
   discord:
-    webhook-uri: '{custom.dev.webhook.logBack}'
+    webhook-uri: '${custom.dev.webhook.logBack}'
   config: classpath:log/logback-spring.xml
