[FIX]스웨거 servers 변경

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -25,3 +25,6 @@ logging:
   discord:
     webhook-uri: '${custom.dev.webhook.logBack}'
   config: classpath:log/logback-spring.xml
+
+custom:
+  url: '${custom.dev.url}'
