--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,8 +1,4 @@
 spring:
-  mvc:
-    servlet:
-      path: '${custom.local.servlet.path}'
-
   datasource:
     driver-class-name: '${custom.local.database.driver-class-name}'
     url: '${custom.local.database.url}'
@@ -15,7 +11,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: create-drop
     properties:
       hibernate:
         show_sql: true
@@ -30,6 +26,8 @@ logging:
     org.hibernate.orm.jdbc.extract: TRACE
 
 server:
+  servlet:
+    context-path: '${custom.local.servlet.path}'
   port: '${custom.local.server.port}'
 
 custom:
