--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
             scope:
             client-name: Kakao
             authorization-grant-type: authorization_code
-            redirect-uri: '{baseUrl}/{action}/oauth2/code/{registrationId}'
+            redirect-uri: '{baseUrl}/oauth2/callback/{registrationId}'
             client-authentication-method: POST
         provider:
           kakao:
@@ -22,11 +22,6 @@ spring:
             token-uri: https://kauth.kakao.com/oauth/token
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user-name-attribute: id
-
-  jpa:
-    properties:
-      hibernate:
-        default_batch_fetch_size: 1000
 
 kakao:
   rest:
