--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -18,6 +18,13 @@ spring:
         format_sql: true
         use_sql_comments: true
 
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            redirect-uri: '${custom.local.kakao-redirect-url}'
+
 logging:
   level:
     root: INFO
