--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,8 +13,8 @@ spring:
           kakao:
             scope:
             client-name: Kakao
+            client-id: '${kakao.rest.api.key}'
             authorization-grant-type: authorization_code
-            redirect-uri: '{baseUrl}/oauth2/callback/{registrationId}'
             client-authentication-method: POST
         provider:
           kakao:
