[FIX]application-test.yml에 oauth2 redirect-url 추가

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -17,5 +17,11 @@ spring:
       data-locations: classpath:test_data_h2.sql
       mode: always
 
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            redirect-uri: '${custom.local.kakao-redirect-url}'
 custom:
   url: '${custom.local.url}'
