--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -13,6 +13,11 @@ spring:
     hibernate:
       ddl-auto: create
 
+  sql:
+    init:
+      data-locations: classpath:test_data_h2.sql
+      mode: always
+
   security:
     oauth2:
       client:
