[TEST]테스트 데이터 추가

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -10,12 +10,13 @@ spring:
       port: '${custom.dev.redis.port}'
 
   jpa:
+    defer-datasource-initialization: true
     hibernate:
       ddl-auto: create
 
   sql:
     init:
-      data-locations: classpath:test_data_h2.sql
+      data-locations: classpath:dev_data.sql
       mode: always
 
   security:
