--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -10,6 +10,7 @@ spring:
       port: '${custom.local.redis.port}'
 
   jpa:
+    defer-datasource-initialization: true
     hibernate:
       ddl-auto: create
     properties:
@@ -17,6 +18,11 @@ spring:
         show_sql: true
         format_sql: true
         use_sql_comments: true
+
+  sql:
+    init:
+      data-locations: classpath:dev_data.sql
+      mode: always
 
   security:
     oauth2:
