[FIX]네이버 구글 로그인 추가

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -24,6 +24,10 @@ spring:
         registration:
           kakao:
             redirect-uri: '${custom.local.kakao-redirect-url}'
+          naver:
+            redirect-uri: '${custom.local.naver-redirect-url}'
+          google:
+            redirect-uri: '${custom.local.google-redirect-url}'
 
 logging:
   level:
