--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -19,6 +19,10 @@ spring:
         registration:
           kakao:
             redirect-uri: '${custom.dev.kakao-redirect-url}'
+          naver:
+            redirect-uri: '${custom.dev.naver-redirect-url}'
+          google:
+            redirect-uri: '${custom.dev.google-redirect-url}'
 
 server:
   servlet:
