--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,9 +16,24 @@ spring:
             client-id: '${kakao.rest.api.key}'
             authorization-grant-type: authorization_code
             client-authentication-method: POST
+          naver:
+            scope:
+            client-name: Naver
+            client-id: '${naver.secret.key}'
+            client-secret: '${naver.secret.key}'
+          google:
+            client-name: Google
+            scope: profile
+            client-id: '${google.client.id}'
+            client-secret: '${google.secret.key}'
         provider:
           kakao:
             authorization-uri: https://kauth.kakao.com/oauth/authorize
             token-uri: https://kauth.kakao.com/oauth/token
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user-name-attribute: id
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
