[TEST]테스트 수정

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -22,6 +22,10 @@ spring:
       client:
         registration:
           kakao:
-            redirect-uri: '${custom.local.kakao-redirect-url}'
+            redirect-uri: '${custom.local.kakao.redirect-url}'
+          naver:
+            redirect-uri: '${custom.local.naver.redirect-url}'
+          google:
+            redirect-uri: '${custom.local.google.redirect-url}'
 custom:
   url: '${custom.local.url}'
