[FEAT]몽고디비 설정

--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     implementation 'org.webjars:webjars-locator-core'
     implementation 'org.webjars:sockjs-client:1.5.1'
     implementation 'org.webjars:stomp-websocket:2.3.4'
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 }
 
 tasks.named('test') {
